[enhancement] Implement reindexing with scope support
- Introduced a new `ReindexScope` enum to define reindexing modes: ALL, FULLTEXT, and VECTOR.
- Updated `IndexController` to manage reindexing scope during operations.
- Enhanced `DBBroker` and `NativeBroker` interfaces to accept reindexing scope parameters.
- Modified `IndexQueryService` and its implementations to support reindexing with specified scopes.
- Added tests to validate reindexing functionality with different scopes, ensuring correct behavior across various scenarios.